--- a/src/templates/common/footer/footer.css
+++ b/src/templates/common/footer/footer.css
@@ -1,12 +1,20 @@
-.Footer .footer-copyright  {
+
+#footer {
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 200px;
+}
+
+#footer .footer-copyright  {
     padding: 8px;
 }
 
-.Footer .footer-text {
+#footer .footer-text {
     padding-top: 8px;
     margin-bottom: 0px;
 }
 
-.Footer .footer-icon path{
+#footer .footer-icon path{
     fill: #70C1B3;
 }
