--- a/src/templates/home/home.css
+++ b/src/templates/home/home.css
@@ -3,3 +3,9 @@
     margin: 40px;
     margin-bottom: 100px;
 }
+
+.home-page .logo {
+    height: 200px;
+    width: 200px;
+    margin-bottom: 12px;
+}
