--- a/src/templates/error/error.css
+++ b/src/templates/error/error.css
@@ -14,3 +14,13 @@
   display: inline-flex;
   padding-left: 10em;
 }
+
+.error-page img{
+  -webkit-animation:spin 2s linear infinite;
+  -moz-animation:spin 2s linear infinite;
+  animation:spin 2s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
