--- a/src/templates/error/error.css
+++ b/src/templates/error/error.css
@@ -16,6 +16,7 @@
 }
 
 .error-page img{
+  cursor: pointer;
   -webkit-animation:spin 2s linear infinite;
   -moz-animation:spin 2s linear infinite;
   animation:spin 2s linear infinite;
