--- a/src/admin/templates/projects.css
+++ b/src/admin/templates/projects.css
@@ -1,3 +1,13 @@
-.page-container.admin {
-    margin-left: 8px;
+.card-body{
+  overflow: auto;
+}
+
+.list-group {
+  margin-top: 20px;
+}
+
+.projects-card{
+  padding: 0;
+  margin:0;
+  margin-top: 20px;
 }
