--- a/src/admin/templates/users-card.css
+++ b/src/admin/templates/users-card.css
@@ -1,3 +1,17 @@
+.card-body{
+  overflow: auto;
+}
+
 .users-card .card-footer .btn {
     margin-right: 5px;
+}
+
+.list-group {
+  margin-top: 20px;
+}
+
+.users-card{
+  padding: 0;
+  margin:0;
+  margin-top: 20px;
 }
