--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -1,5 +1,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.css");
 
+
 /* bootstrap */
 
 /* bg */
@@ -173,6 +174,17 @@ nav#header {
     margin-left: 8px;
 }
 
+/* modals */
+.facebook {
+  background-color: #3b5998;
+  color: white;
+}
+
+.google {
+  background-color: #dc4e42;
+  color: white;
+}
+
 /* signin-modal */
 #signin-modal .buttons{
     margin-right: 1rem;
@@ -183,6 +195,11 @@ nav#header {
 
 #signin-modal .buttons .btn {
     margin-left: 1rem;
+}
+
+div.required label:after {
+    content: " *";
+    color: red;
 }
 
 /* footer */
