--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -185,6 +185,10 @@ nav#header {
   color: white;
 }
 
+.modal-footer{
+  padding: 10px;
+}
+
 /* signin-modal */
 #signin-modal .buttons{
     margin-right: 1rem;
