--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -185,20 +185,18 @@ nav#header {
   color: white;
 }
 
-.modal-footer{
-  padding: 10px;
-}
-
 /* signin-modal */
 #signin-modal .buttons{
     margin-right: 1rem;
-    padding-right: 1rem;
-    padding-left: 1rem;
     margin-bottom: 1rem;
 }
 
 #signin-modal .buttons .btn {
     margin-left: 1rem;
+}
+
+#signin-modal .modal-footer .btn {
+    margin-top: 10px;
 }
 
 div.required label:after {
