--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -345,11 +345,49 @@ div.required label:after {
  #profile #profile-header-card .company {
     color: #247BA0;
  }
-
-
 /* Small devices (landscape phones, 576px and up) */
  @media (max-width: 576px) { 
     #profile #profile-header-card{
         text-align: center;
     }
+
+    #profile  #profile-projects-card {
+        text-align: center;
+    }
+
+    #profile #profile-projects-card .card-body {
+        display: inline-block;
+        margin: auto;
+    }
  }
+
+/* project-card */
+.card.project-card {
+    width: 10em;
+    overflow: hidden;
+}
+
+.card.project-card img {
+    height: 5em;
+    object-fit: cover;
+    border-color: #247BA0;
+    border-bottom-style: groove;
+}
+
+.card.project-card .card-body h5 {
+    font-size: 1.1em;
+    margin-top: -.5em;
+}
+
+.card.card.project-card .card-body .btn-group {
+    width: 100%;
+    height: 2.5em;
+}
+
+.card.card.project-card .card-body .btn-group .btn{
+    width: 33.3%;
+    display: inline-block;
+    padding: 0;
+}
+
+
