--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -1,142 +1,4 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.css");
-
-
-/* bootstrap */
-
-/* bg */
-.bg-dark{
-    background-color: #50514F !important;
-    color: white;
-}
-
-.bg-primary {
-    background-color: #247BA0 !important;
-    color: white;
-}
-
-.bg-terciary {
-    background-color: #70C1B3 !important;
-    color: white;
-}
-
-/* btn colors */
-.btn.btn-terciary {
-    background-color: #70C1B3 !important;
-    border-color: #70C1B3;
-    color: white;
-}
-
-.btn.btn-primary {
-    background-color: #F25F5C !important;
-    border-color: #F25F5C;
-}
-.btn.btn-primary:hover {
-    background-color: #F25FAA !important;
-}
-
-.btn.btn-secondary {
-    background-color: #247BA0 !important;
-    border-color: #247BA0;
-    color: white;
-}
-
-/* btn outline colors */
-.btn.btn-outline-primary {
-    border-color: #F25F5C;
-    color: #F25F5C;
-}
-.btn.btn-outline-primary:hover {
-    border-color: #F25F5C;
-    background-color: #F25F5C;
-    color: white;
-}
-
-.btn.btn-outline-secondary {
-    border-color: #247BA0;
-    color: #247BA0;
-}
-.btn.btn-outline-secondary:hover {
-    border-color: #247BA0;
-    background-color: #247BA0;
-    color: white;
-}
-
-.btn.btn-outline-terciary {
-    border-color: #70C1B3;
-    background-color: transparent;
-    color: #70C1B3;
-}
-
-.btn.btn-outline-terciary:hover {
-    border-color: #70C1B3;
-    background-color: #70C1B3;;
-    color: white;
-}
-
-/* breadcrumb */
-
-.breadcrumb {
-    border-color: #70C1B3;
-    border-width: 1px;
-    background-color: transparent;
-    border-style: solid;
-}
-
-.breadcrumb .breadcrumb-item  {
-    color: #70C1B3;
-}
-
-.breadcrumb .breadcrumb-item  a {
-    color: #70C1B3;
-    opacity: 0.6;
-}
-
-.breadcrumb .breadcrumb-item .active #text {
-    color: #70C1B3;
-}
-
-.breadcrumb .breadcrumb-item::before {
-    color: #70C1B3;
-}
-
-/* panel */
-.panel-header {
-    background-color: #247BA0 !important;
-    border-color: #247BA0;
-    color: white;
-}
-
-.panel-header .panel-button {
-    float: right;
-}
-
-.panel-header .panel-title {
-    padding-top: 6px;
-}
-
-.img-round {
-    border-radius: 50%;
-}
-
-/* app */
-html,
-body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
-#container {
-  min-height: 100%;
-  padding: 0;
-  position: relative;
-}
-
-#body {
-  padding: 10px;
-  padding-bottom: 250px;
-  max-width: 70em;
-}
+@import url("common.css");
 
 /* navbar (header) */
 
