--- a/website/public/css/admin.css
+++ b/website/public/css/admin.css
@@ -63,3 +63,9 @@ html, body {
 .projects-card .card-footer .btn.btn-secondary {
     margin-right: 8px;
 }
+
+.projects-card{
+  padding: 0;
+  margin:0;
+  margin-top: 20px;
+}
