--- a/website/public/css/common.css
+++ b/website/public/css/common.css
@@ -137,6 +137,13 @@ body {
   max-width: 70em;
 }
 
+/* card */
+.card{
+  padding: 0;
+  margin:0;
+  margin-top: 20px;
+}
+
 /* card body */
 
 .card-body{
