--- a/website/public/css/common.css
+++ b/website/public/css/common.css
@@ -120,32 +120,37 @@
 /* app */
 html,
 body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 #container {
-  min-height: 100%;
-  padding: 0;
-  position: relative;
+    min-height: 100%;
+    padding: 0;
+    position: relative;
 }
 
 #body {
-  padding: 10px;
-  padding-bottom: 200px;
-  max-width: 70em;
+    padding: 10px;
+    padding-bottom: 200px;
+    max-width: 70em;
 }
 
-/* card */
-.card{
-  padding: 0;
-  margin:0;
-  margin-top: 20px;
+/* page with menu */
+
+.page-with-menu .menu {
+    padding: 0;
 }
 
-/* card body */
-
-.card-body{
-  overflow: auto;
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+    .page-with-menu .card{
+        padding: 0;
+        margin:0;
+        margin-top: 20px;
+    }
+    .page-with-menu .card .card-body{
+        overflow: auto;
+    }
 }
