--- a/website/public/css/common.css
+++ b/website/public/css/common.css
@@ -72,6 +72,16 @@
     color: white;
 }
 
+.btn-circle {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 25px;
+}
+
 /* breadcrumb */
 
 .breadcrumb {
