panel now is alligned with the menu

--- a/website/public/css/common.css
+++ b/website/public/css/common.css
@@ -153,4 +153,9 @@ body {
     .page-with-menu .card .card-body{
         overflow: auto;
     }
+
+    .page-with-menu .panel {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
