added editProfile Modal 💎🚧

--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -253,7 +253,7 @@ div.required label:after {
     }
  }
 
- #profile-header-card .btn{
+ #profile-header-card .btn-circle{
     position: absolute;
     right: -20px;
     top: -20px;
