--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -203,6 +203,9 @@ div.required label:after {
 
 /* dashboard */
 
+#dashboard #card-body {
+  padding: 0;
+}
 
 #dashboard .card-body .media {
   padding-top: 0.5em;
@@ -223,6 +226,7 @@ div.required label:after {
 }
 
 #dashboard .create_new_project{
+  margin-top: 1em;
   margin-bottom: 1em;
 }
 
