--- a/website/public/css/common.css
+++ b/website/public/css/common.css
@@ -175,6 +175,13 @@
     padding-top: 6px;
 }
 
+@media(max-width: 576px){
+    .panel-header h5, .panel-header .panel-title {
+        text-align: center;
+        padding-bottom: 6px;
+    }
+}
+
 .img-round {
     border-radius: 50%;
 }
