--- a/website/public/css/common.css
+++ b/website/public/css/common.css
@@ -181,11 +181,14 @@
     }
 }
 
+/* image */
+
 .img-round {
     border-radius: 50%;
 }
 
 /* app */
+
 html,
 body {
     margin: 0;
@@ -200,7 +203,7 @@ body {
 }
 
 #body {
-    padding: 10px;
+    padding: 20px;
     padding-bottom: 200px;
     max-width: 70em;
 }
