--- a/website/public/css/common.css
+++ b/website/public/css/common.css
@@ -18,6 +18,22 @@
     color: white;
 }
 
+/* select option colors*/
+select.slct-primary {
+  background-color: #F25F5C;
+  color: white;
+}
+
+select.slct-primary:active {
+  background-color: #F25F5C;
+  color: white;
+}
+
+option.slct-primary {
+  background-color: #F25F5C;
+  color: white;
+}
+
 /* btn colors */
 
 .btn.btn-primary {
@@ -220,8 +236,24 @@ body {
 }
 
 /* thumbnail */
+.thumbnail-small{
+  width: 50px;
+}
+
 .thumbnail{
   width: 100px;
+}
+
+.thumbnail-big{
+  width: 150px;
+}
+
+/* .img-center */
+
+.img-center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Small devices (landscape phones, 576px and up) */
