project :gem: :iphone:

--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -245,7 +245,7 @@ div.required label:after {
     #dashboard .tasks-card .nav-link {
         font-size: 13px;
     }
-    
+
     #dashboard .tasks-card .nav-link {
         margin-top: 8px;
     }
@@ -260,6 +260,9 @@ div.required label:after {
 }
 
 /* project page*/
+
+#project-page #project-content{
+}
 
 #project-page #project_media img{
     padding-top: 2em;
