--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -354,6 +354,11 @@ div.required label:after {
     padding: 0;
 }
 
+.card.project-card .card-body  a {
+    text-decoration: none;
+    color: white;
+}
+
 /* user card */
 
 .card.user-card  {
