--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -103,8 +103,8 @@ div.required label:after {
 }
 
 #contact #map {
-    width:100%;
-    height:200px;
+    width:20em;
+    height:20em;
 }
 
 #contact .row .text {
