--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -261,8 +261,18 @@ div.required label:after {
 
 /* project page*/
 
-#project-page #project-container{
-  padding-bottom: 20px;
+#project-page #project-card{
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-bottom: 20px;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+  #project-page #project-card{
+    margin-left: -15px;
+    margin-right: -15px;
+  }
 }
 
 #project-page #project_media img{
