--- a/website/public/css/admin.css
+++ b/website/public/css/admin.css
@@ -28,6 +28,14 @@ html, body {
   color: white;
 }
 
+/* small devices */
+@media(max-width: 768px){
+  .admin-login .card {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+}
+
 /* cards */
 
 .list-group {
