fixed both admin tables :hammer: :bug:

--- a/website/public/css/admin.css
+++ b/website/public/css/admin.css
@@ -36,6 +36,16 @@ html, body {
   }
 }
 
+/* admin-panel */
+
+#admin-panel .nopadding .card-body{
+  padding: 0;
+}
+
+#admin-panel .more{
+  padding: 0;
+}
+
 /* cards */
 
 .list-group {
