--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -331,6 +331,12 @@ div.required label:after {
   margin-bottom: 1em;
 }
 
+#project-page #newtask-button{
+  margin-top: 1em !important;
+  background-color: gray;
+  color: white;
+}
+
 #project-page #forum-button{
   margin-top: 1em !important;
   background-color: gray;
