--- a/css/css.css
+++ b/css/css.css
@@ -327,8 +327,14 @@ div.required label:after {
   margin-bottom: 1em;
 }
 
-#project-page #forum-card-footer{
-  padding: 0;
+#project-page .forum-card{
+  margin-bottom: 1em;
+}
+
+#project-page #newtask-button{
+  margin-top: 1em !important;
+  background-color: gray;
+  color: white;
 }
 
 #project-page #forum-button{
