--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -31,6 +31,15 @@
     margin-left: 8px;
 }
 
+#header .dropdown {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#header .logout {
+  display: none;
+}
+
 /* Small devices (landscape phones, 728px and up) */
 @media (max-width: 728px) {
 
@@ -41,6 +50,14 @@
 
     #header .buttons .btn {
         margin: 0;
+    }
+
+    #header .logout {
+      display: block;
+    }
+
+    #header .dropdown {
+      display: none;
     }
 }
 
