--- a/lbaw-laravel/public/css/common.css
+++ b/lbaw-laravel/public/css/common.css
@@ -133,6 +133,23 @@ option.slct-primary {
     color: white;
 }
 
+.card-delete-button{
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 25px;
+    position: absolute;
+    left: -20px;
+    top: -20px;
+}
+
+.card-delete-button a {
+    color: white;
+}
+
 /* text */
 
 .text-link {
