Delete tags for tasks working :zap:

--- a/lbaw-laravel/public/css/common.css
+++ b/lbaw-laravel/public/css/common.css
@@ -150,6 +150,20 @@ option.slct-primary {
     color: white;
 }
 
+.round-buton{
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 25px;
+}
+
+.round-buton a {
+    color: white;
+}
+
 /* text */
 
 .text-link {
