users can now assign/unassign tasks :zap:

--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -468,6 +468,10 @@ div.required label:after {
   margin-right: 1em;
 }
 
+.octicon-sign-out, .octicon-sign-in{
+  padding-top: 10px;
+}
+
 /* faq */
 
 #faq h5 {
