--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -360,6 +360,10 @@ div.required label:after {
   color: white;
 }
 
+.deleteProject{
+  float: right;
+}
+
  /* profile */
 
 #profile #profile-header-card img {
