--- a/lbaw-laravel/public/css/common.css
+++ b/lbaw-laravel/public/css/common.css
@@ -133,7 +133,7 @@ option.slct-primary {
     color: white;
 }
 
-.card-delete-button{
+.card-delete-button, .card-private-button{
     width: 50px;
     height: 50px;
     text-align: center;
