--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -497,8 +497,9 @@ div.required label:after {
   margin-right: 1em;
 }
 
-.octicon-sign-out, .octicon-sign-in{
+.octicon-sign-out, .octicon-sign-in, .octicon-lock{
   padding-top: 10px;
+  color: white;
 }
 
 input[type='checkbox']{
