--- a/lbaw-laravel/public/css/css.css
+++ b/lbaw-laravel/public/css/css.css
@@ -226,6 +226,14 @@ div.required label:after {
 
 /* dashboard */
 
+li{
+  list-style-type: none;
+}
+
+li a{
+  border-radius: 0 !important;
+}
+
 #dashboard .card-body .media {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
@@ -532,6 +540,10 @@ input[type='checkbox']{
     margin-top: .45em;
     margin-right: .45em;
     color: black;
+}
+
+#task .octicon-pencil{
+  padding-top: 10px;
 }
 
 /* faq */
