--- a/lbaw-laravel/public/css/common.css
+++ b/lbaw-laravel/public/css/common.css
@@ -279,6 +279,14 @@ body {
     max-width: 70em;
 }
 
+li{
+  list-style-type: none;
+}
+
+li a{
+  border-radius: 0 !important;
+}
+
 /* page with menu */
 
 .page-with-menu .menu {
